// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clean handles empty del 1`] = `
[
  [
    [],
    {
      "cwd": "<PROJECT_ROOT>/dist",
      "dot": true,
    },
  ],
]
`;

exports[`clean handles empty del 2`] = `
[
  [
    "<PROJECT_ROOT>/dist/nested",
  ],
  [
    "<PROJECT_ROOT>/dist/another_nested/folder",
  ],
]
`;

exports[`clean handles empty makeDirs 1`] = `
[
  [
    [
      "**/*",
    ],
    {
      "cwd": "<PROJECT_ROOT>/dist",
      "dot": true,
    },
  ],
]
`;

exports[`clean handles multiple clean 1`] = `
[
  [
    [
      "**/*",
      "!.git",
      "!two.js",
    ],
    {
      "cwd": "<PROJECT_ROOT>/dist",
      "dot": true,
    },
  ],
]
`;

exports[`clean handles multiple clean 2`] = `
[
  [
    "<PROJECT_ROOT>/dist/nested",
  ],
  [
    "<PROJECT_ROOT>/dist/another_nested/folder",
  ],
  [
    "<PROJECT_ROOT>/dist/another_two_nested/folder",
  ],
]
`;

exports[`clean handles multiple clean 3`] = `
[
  [
    "<PROJECT_ROOT>/outside-build.js",
    "<PROJECT_ROOT>/dist/static/outside-build.js",
    {
      "errorOnExist": true,
      "overwrite": true,
      "preserveTimestamps": true,
    },
  ],
  [
    "<PROJECT_ROOT>/static/static-1.js",
    "<PROJECT_ROOT>/dist/static/static-1.fade7080.js",
    {
      "errorOnExist": true,
      "overwrite": true,
      "preserveTimestamps": true,
    },
  ],
]
`;

exports[`clean handles one clean 1`] = `
[
  [
    [
      "**/*",
    ],
    {
      "cwd": "<PROJECT_ROOT>/dist",
      "dot": true,
    },
  ],
]
`;

exports[`clean handles one clean 2`] = `
[
  [
    "<PROJECT_ROOT>/dist/nested",
  ],
  [
    "<PROJECT_ROOT>/dist/another_nested/folder",
  ],
]
`;

exports[`clean handles one clean 3`] = `
[
  [
    "<PROJECT_ROOT>/static/static-1.js",
    "<PROJECT_ROOT>/dist/static/static-1.fade7080.js",
    {
      "errorOnExist": true,
      "overwrite": true,
      "preserveTimestamps": true,
    },
  ],
]
`;

exports[`clean handles undefined 1`] = `
[
  [
    [],
    {
      "cwd": "<PROJECT_ROOT>/dist",
      "dot": true,
    },
  ],
]
`;

exports[`clean merges duplicates in correct order 1`] = `
[
  [
    [
      "duplicate/file",
      "unique/file",
    ],
    {
      "cwd": "<PROJECT_ROOT>/dist",
      "dot": true,
    },
  ],
]
`;

exports[`clean merges duplicates in correct order 2`] = `
[
  [
    "<PROJECT_ROOT>/dist/duplicate/dir",
  ],
  [
    "<PROJECT_ROOT>/dist/unique/dir",
  ],
]
`;
